tests/ui/input/unknown_param_ident.stderr
error: unknown generic parameter
 --> tests/ui/input/unknown_param_ident.rs:4:18
  |
4 | #[funcmap(params(S))]
  |                  ^
